fix funky sub-header column spacing at 991px.

--- a/css/application.css
+++ b/css/application.css
@@ -182,6 +182,9 @@ main {
       margin: 10px 0;
       width: 100%;
       height: 200px; }
+      @media only screen and (max-width: 991px) {
+        .container .aside-container .tile3 {
+          margin: 30px 0; } }
       .container .aside-container .tile3 .small-img {
         background-color: #7ed4a4;
         width: 50px;
