--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -204,6 +204,9 @@ main {
       margin: 10px 0;
       width: 100%;
       height: 200px;
+      @media only screen and (max-width: 991px) {
+        margin: 30px 0;
+      }
       .small-img {
         background-color: lighten(seagreen, 30%);
         width: 50px;
